# deepagents_ollama

./: .gitignore  GEMINI_bup.md  NOTICE  README.md  SPEC.md
showroom/: README.md  __init__.py  agent.py  agent_deepagents.py  app.py  memory_utils.py  ollama_adapter.py  pyproject.toml
showroom/docs/: hints.md  implementation_plan.md  task.md  walkthrough.md
showroom/research_agent/: __init__.py  prompts.py  tools.py
